[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhdc-vllm-control"
version = "1.0.0"
description = "vLLM On-Demand Control API for managing vLLM container lifecycles"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "RHDC Infrastructure Team", email = "noreply@rodhouse.net"}
]
keywords = ["vllm", "container-management", "inference", "api", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "httpx",  # For testing FastAPI
]

[project.urls]
Homepage = "https://github.com/flyemsafe/rhdc-vllm-control"
Repository = "https://github.com/flyemsafe/rhdc-vllm-control"
Issues = "https://github.com/flyemsafe/rhdc-vllm-control/issues"

[project.scripts]
vllm-control = "vllm_control.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_control*"]
exclude = ["tests*"]
